--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "stylelint:css,scss": "stylelint ./styles/*{.css,.scss}",
         "stylelint:fix": "stylelint ./styles/*{.css,.scss} --fix",
         "lint": "npm run lint:js && npm run stylelint:css,scss",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "build": "webpack",
+        "start": "webpack -dev-server --open"
     },
     "repository": {
         "type": "git",
@@ -23,16 +25,25 @@
     },
     "homepage": "https://github.com/lokkib/Game#readme",
     "devDependencies": {
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.1",
+        "css-minimizer-webpack-plugin": "^4.0.0",
         "eslint": "^8.21.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "html-webpack-plugin": "^5.5.0",
         "husky": "^8.0.0",
+        "mini-css-extract-plugin": "^2.6.1",
         "prettier": "^2.7.1",
+        "style-loader": "^3.3.1",
         "stylelint": "^14.9.1",
         "stylelint-config-prettier": "^9.0.3",
         "stylelint-config-standard": "^26.0.0",
         "stylelint-config-standard-scss": "^5.0.0",
-        "stylelint-prettier": "^2.0.0"
+        "stylelint-prettier": "^2.0.0",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.10.0"
     },
     "dependencies": {}
 }
