--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "lint": "npm run lint:js && npm run stylelint:css,scss",
         "prepare": "husky install",
         "build": "webpack",
-        "start": "webpack-dev-server --open"
+        "start": "webpack-dev-server --open",
+        "lint:ts": "tsc --noEmit"
     },
     "repository": {
         "type": "git",
@@ -44,6 +45,8 @@
         "stylelint-config-standard": "^26.0.0",
         "stylelint-config-standard-scss": "^5.0.0",
         "stylelint-prettier": "^2.0.0",
+        "ts-loader": "^9.3.1",
+        "typescript": "^4.7.4",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.10.0"
