--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,15 +4,23 @@
         "es6": true,
         "node": true
     },
-    "extends": ["eslint:recommended", "prettier"],
-    "plugins": ["prettier"],
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
+        "prettier"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint", "prettier"],
     "parserOptions": {
         "ecmaVersion": 2020,
         "sourceType": "module"
     },
     "rules": {
+        "no-console": 1,
         "prettier/prettier": "error",
         "camelcase": ["error"],
-        "eqeqeq": ["error", "always"]
+        "eqeqeq": ["error", "always"],
+        "prefer-const": ["off", { "ignoreReadBeforeAssign": true }]
     }
 }
