--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.10.0"
+    },
+    "dependencies": {
+        "favicons-webpack-plugin": "^6.0.0"
     }
 }
